# QR-code-reader

./: build.gradle
app/src/main/java/by/project/dartlen/qr_code_reader/: App.kt  CMakeLists.txt  MainActivity.kt
app/src/main/java/by/project/dartlen/qr_code_reader/di/component/: AppComponent.kt
app/src/main/java/by/project/dartlen/qr_code_reader/di/module/: AppModule.kt  RouterModule.kt
app/src/main/java/by/project/dartlen/qr_code_reader/di/module/fragments/: MainModule.kt
app/src/main/java/by/project/dartlen/qr_code_reader/di/module/main/: MainActivityModule.kt
app/src/main/java/by/project/dartlen/qr_code_reader/di/scope/: ActivityScope.kt  FragmentScope.kt
app/src/main/java/by/project/dartlen/qr_code_reader/presentation/presenter/camera/: CameraPresenter.kt
app/src/main/java/by/project/dartlen/qr_code_reader/presentation/presenter/main/: MainPresenter.kt
app/src/main/java/by/project/dartlen/qr_code_reader/presentation/routing/: MainRouting.kt
app/src/main/java/by/project/dartlen/qr_code_reader/presentation/routing/base/: BaseRouting.kt  IRoutingBinder.kt
app/src/main/java/by/project/dartlen/qr_code_reader/presentation/view/: ICameraView.kt  IMainView.kt
app/src/main/java/by/project/dartlen/qr_code_reader/ui/activity/: CameraActivity.kt  MainActivity.kt
app/src/main/java/by/project/dartlen/qr_code_reader/ui/base/: BaseFragment.kt  SingleFragmentActivity.kt
app/src/main/java/by/project/dartlen/qr_code_reader/ui/fragment/: CameraFragment.kt  MainFragment.kt
app/src/main/java/by/project/dartlen/qr_code_reader/ui/viewholder/: Screens.kt
(+16 files in other folders)
